# langchain_ruby

./: Gemfile  README.md  langchain_ruby.gemspec  pyproject.toml
lib/: langchain.rb
lib/langchain/: instrumentation.rb  llms.rb  prompts.rb  version.rb
lib/langchain/instrumentation/: openinference.rb  opentelemetry.rb
lib/langchain/instrumentation/openinference/: langchain_instrumentor.rb
lib/langchain/instrumentation/opentelemetry/: export.rb  trace_api.rb  tracer_provider.rb
lib/langchain/llms/: llm_base.rb  ollama.rb  open_ai.rb
lib/langchain/prompts/: few_shot_prompt_template.rb  prompt.rb
sig/: langchain_ruby.rbs
spec/: langchain_ruby_spec.rb  spec_helper.rb
