[tool.poetry]
name = "langchain-ruby"
version = "0.1.0"
description = ""
authors = ["Brett Shollenberger <brettshollenberger@Bretts-MacBook-Pro-2.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.14"
openinference-instrumentation-langchain = "^0.1.27"
arize-phoenix = "^4.28.1"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
